# OpenglDemo

./: CMakeLists.txt  README.md  imgui.ini  premake5.cmd  premake5.lua
res/shaders/: Basic.shader  Basic2.shader
src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utilities.cpp  Utilities.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/net/: GyroUdpCapture.cpp  GyroUdpCapture.h  GyroUdpDataAsync.cpp  GyroUdpDataAsync.h  IGyroUdpListener.h
src/tests/: Test.cpp  Test.h  TestCamTracking.cpp  TestCamTracking.h  TestClearColor.cpp  TestClearColor.h  TestUdpMonitor.cpp  TestUdpMonitor.h
src/tracking/: FeaturePoint.h  Frame.cpp  Frame.h  FrameMatcher.cpp  FrameMatcher.h  ITrackerListener.h  KeyFrame.cpp  KeyFrame.h  Tracker.cpp  Tracker.h  XICamera.cpp  XICamera.h
